--- a/WeatherApp/WeatherApp/Cells/WeatherTableViewCell.xib
+++ b/WeatherApp/WeatherApp/Cells/WeatherTableViewCell.xib
@@ -1,21 +1,81 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="NotoSans-Medium.ttf">
+            <string>NotoSans-Medium</string>
+        </array>
+        <array key="NotoSans-Regular.ttf">
+            <string>NotoSans-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="WeatherTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="WeatherTableViewCell" customModule="WeatherApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ghO-EI-xrc">
+                        <rect key="frame" x="261" y="12" width="40" height="37.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="bH2-Ui-MhB"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="el8-Yq-d6l">
+                        <rect key="frame" x="12" y="19" width="44.5" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="hBo-xa-cQ3"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="NotoSans-Regular" family="Noto Sans" pointSize="18"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZz-Df-V2K">
+                        <rect key="frame" x="175" y="16" width="51.5" height="27.5"/>
+                        <fontDescription key="fontDescription" name="NotoSans-Medium" family="Noto Sans" pointSize="20"/>
+                        <color key="textColor" name="BasicWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" name="DarkBackground"/>
+                <constraints>
+                    <constraint firstItem="ghO-EI-xrc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="3mJ-Sr-ojC"/>
+                    <constraint firstAttribute="bottom" secondItem="ghO-EI-xrc" secondAttribute="bottom" constant="12" id="XSn-gp-1tg"/>
+                    <constraint firstItem="UZz-Df-V2K" firstAttribute="leading" secondItem="el8-Yq-d6l" secondAttribute="trailing" constant="120" id="Xwz-3a-btO"/>
+                    <constraint firstAttribute="bottom" secondItem="el8-Yq-d6l" secondAttribute="bottom" constant="19" id="Y8d-0m-jqM"/>
+                    <constraint firstAttribute="bottom" secondItem="UZz-Df-V2K" secondAttribute="bottom" constant="19" id="YH5-y2-Wge"/>
+                    <constraint firstAttribute="trailing" secondItem="ghO-EI-xrc" secondAttribute="trailing" constant="19" id="a9m-Gb-rPK"/>
+                    <constraint firstItem="el8-Yq-d6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="oqj-aF-Ti5"/>
+                    <constraint firstItem="el8-Yq-d6l" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="qCa-i4-7Dz"/>
+                    <constraint firstItem="UZz-Df-V2K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="szE-1s-NwI"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="picture" destination="ghO-EI-xrc" id="ZvC-CB-ghN"/>
+                <outlet property="temperature" destination="UZz-Df-V2K" id="3Pw-RW-j5D"/>
+                <outlet property="time" destination="el8-Yq-d6l" id="rHh-FG-dgt"/>
+            </connections>
+            <point key="canvasLocation" x="111.59420289855073" y="89.732142857142847"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="BasicWhite">
+            <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="DarkBackground">
+            <color red="0.28600001335144043" green="0.29800000786781311" blue="0.63099998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
