fix: improve cells constraints

--- a/WeatherApp/WeatherApp/Cells/CustomCollectionViewCell.xib
+++ b/WeatherApp/WeatherApp/Cells/CustomCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="CustomCollectionViewCell" customModule="WeatherApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="custom" id="gTV-IL-0wX" customClass="CustomCollectionViewCell" customModule="WeatherApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="140" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -43,14 +43,17 @@
                         <color key="highlightedColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="56F-rc-qZo">
-                        <rect key="frame" x="77" y="23.5" width="49" height="15.5"/>
+                        <rect key="frame" x="77" y="21" width="49" height="18"/>
                         <fontDescription key="fontDescription" name="NotoSans-Medium" family="Noto Sans" pointSize="13"/>
                         <color key="textColor" name="BasicYellow"/>
                         <color key="highlightedColor" name="BasicYellow"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="08J-jL-eit">
-                        <rect key="frame" x="99" y="41" width="26" height="14"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="08J-jL-eit">
+                        <rect key="frame" x="26" y="41" width="100" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="XBW-cY-aZ8"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="glD-7D-lv7"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="NotoSans-Regular" family="Noto Sans" pointSize="10"/>
                         <color key="textColor" name="OpaqueWhite"/>
                         <nil key="highlightedColor"/>
@@ -66,11 +69,13 @@
                 <constraint firstAttribute="bottom" secondItem="56F-rc-qZo" secondAttribute="bottom" constant="21" id="K7x-bE-ujl"/>
                 <constraint firstItem="LOT-Od-Kq3" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="Njo-yq-vCj"/>
                 <constraint firstItem="56F-rc-qZo" firstAttribute="leading" secondItem="UOK-lh-KL8" secondAttribute="trailing" constant="30" id="OhG-Vf-8gp"/>
+                <constraint firstAttribute="trailing" secondItem="08J-jL-eit" secondAttribute="trailing" constant="14" id="QGo-CD-H8e"/>
                 <constraint firstAttribute="trailing" secondItem="UOK-lh-KL8" secondAttribute="trailing" constant="93" id="Sbb-TZ-K3v"/>
                 <constraint firstAttribute="trailing" secondItem="56F-rc-qZo" secondAttribute="trailing" constant="14" id="Uwh-P5-tBN"/>
                 <constraint firstItem="LOT-Od-Kq3" firstAttribute="leading" secondItem="UOK-lh-KL8" secondAttribute="trailing" constant="40" id="YLd-13-iAE"/>
                 <constraint firstAttribute="trailing" secondItem="LOT-Od-Kq3" secondAttribute="trailing" constant="14" id="bA7-0R-8ZP"/>
                 <constraint firstAttribute="bottom" secondItem="LOT-Od-Kq3" secondAttribute="bottom" constant="41" id="chR-aC-dvK"/>
+                <constraint firstAttribute="bottom" secondItem="08J-jL-eit" secondAttribute="bottom" constant="5" id="yaf-8t-FGW"/>
             </constraints>
             <connections>
                 <outlet property="condition" destination="08J-jL-eit" id="H0n-aV-fg2"/>
