--- a/WeatherApp/WeatherApp/Cells/WeatherTableViewCell.xib
+++ b/WeatherApp/WeatherApp/Cells/WeatherTableViewCell.xib
@@ -22,12 +22,12 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="weather" rowHeight="60" id="KGk-i7-Jjw" customClass="WeatherTableViewCell" customModule="WeatherApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ghO-EI-xrc">
-                        <rect key="frame" x="261" y="12" width="40" height="41.5"/>
+                        <rect key="frame" x="258" y="12" width="40" height="41.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="bH2-Ui-MhB"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="eDU-hJ-exe"/>
@@ -44,9 +44,9 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZz-Df-V2K">
-                        <rect key="frame" x="175" y="19" width="55" height="27.5"/>
+                        <rect key="frame" x="152" y="19" width="75" height="27.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="55" id="UD4-gl-pty"/>
+                            <constraint firstAttribute="width" constant="75" id="UD4-gl-pty"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="NotoSans-Medium" family="Noto Sans" pointSize="20"/>
                         <color key="textColor" name="BasicWhite"/>
@@ -59,7 +59,7 @@
                     <constraint firstAttribute="trailing" secondItem="ghO-EI-xrc" secondAttribute="trailing" constant="19" id="AUa-ux-eTB"/>
                     <constraint firstItem="ghO-EI-xrc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="DMI-zf-ko6"/>
                     <constraint firstAttribute="bottom" secondItem="ghO-EI-xrc" secondAttribute="bottom" constant="6.5" id="J5Y-f0-83B"/>
-                    <constraint firstItem="UZz-Df-V2K" firstAttribute="leading" secondItem="el8-Yq-d6l" secondAttribute="trailing" constant="63" id="LLr-E5-5f9"/>
+                    <constraint firstItem="UZz-Df-V2K" firstAttribute="leading" secondItem="el8-Yq-d6l" secondAttribute="trailing" constant="40" id="LLr-E5-5f9"/>
                     <constraint firstItem="ghO-EI-xrc" firstAttribute="leading" secondItem="UZz-Df-V2K" secondAttribute="trailing" constant="31" id="SHd-2g-mnU"/>
                     <constraint firstAttribute="bottom" secondItem="el8-Yq-d6l" secondAttribute="bottom" constant="20" symbolic="YES" id="UCo-3D-aaV"/>
                     <constraint firstItem="UZz-Df-V2K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="c3m-TU-Acx"/>
