--- a/Cookbook/Cookbook/RecipeCell/RecipeCollectionViewCell.xib
+++ b/Cookbook/Cookbook/RecipeCell/RecipeCollectionViewCell.xib
@@ -16,10 +16,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="150" height="190"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Egb-4a-e2u">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="190"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BluredRect" translatesAutoresizingMaskIntoConstraints="NO" id="b1T-Vs-pLq">
                         <rect key="frame" x="0.0" y="129" width="150" height="61"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -37,6 +33,10 @@
                         <color key="textColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="highlightedColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Egb-4a-e2u" customClass="BackgroundImageView" customModule="Cookbook" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="6" width="150" height="190"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -47,6 +47,12 @@
                 <constraint firstItem="JIR-Je-Qep" firstAttribute="top" secondItem="WlN-5O-TDo" secondAttribute="bottom" constant="8" id="czI-n5-Vdq"/>
                 <constraint firstItem="WlN-5O-TDo" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="14" id="mjX-eT-TI7"/>
             </constraints>
+            <connections>
+                <outlet property="backgroundImage" destination="Egb-4a-e2u" id="JlQ-Ue-Ig4"/>
+                <outlet property="mainImage" destination="Egb-4a-e2u" id="E5x-nP-17V"/>
+                <outlet property="name" destination="WlN-5O-TDo" id="GVr-Lj-FCf"/>
+                <outlet property="preparationTime" destination="JIR-Je-Qep" id="ftZ-sj-qvv"/>
+            </connections>
             <point key="canvasLocation" x="131.8840579710145" y="115.84821428571428"/>
         </collectionViewCell>
     </objects>
