--- a/Cookbook/Cookbook/RecipeCell/RecipeCollectionViewCell.xib
+++ b/Cookbook/Cookbook/RecipeCell/RecipeCollectionViewCell.xib
@@ -9,18 +9,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="recipeCell" id="gTV-IL-0wX" customClass="RecipeCollectionViewCell" customModule="Cookbook" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="recipeCell" id="gTV-IL-0wX" customClass="RecipeCollectionViewCell" customModule="Cookbook" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="150" height="190"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="150" height="190"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Egb-4a-e2u" customClass="BackgroundImageView" customModule="Cookbook" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="196"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BluredRect" translatesAutoresizingMaskIntoConstraints="NO" id="b1T-Vs-pLq">
                         <rect key="frame" x="0.0" y="129" width="150" height="61"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WlN-5O-TDo">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WlN-5O-TDo">
                         <rect key="frame" x="14" y="138" width="126" height="20"/>
                         <color key="tintColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -33,10 +37,6 @@
                         <color key="textColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="highlightedColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Egb-4a-e2u" customClass="BackgroundImageView" customModule="Cookbook" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="6" width="150" height="190"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -49,7 +49,7 @@
             </constraints>
             <connections>
                 <outlet property="backgroundImage" destination="Egb-4a-e2u" id="JlQ-Ue-Ig4"/>
-                <outlet property="mainImage" destination="Egb-4a-e2u" id="E5x-nP-17V"/>
+                <outlet property="bluringRectangle" destination="b1T-Vs-pLq" id="xEw-mi-CxV"/>
                 <outlet property="name" destination="WlN-5O-TDo" id="GVr-Lj-FCf"/>
                 <outlet property="preparationTime" destination="JIR-Je-Qep" id="ftZ-sj-qvv"/>
             </connections>
